--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A basic Calculator in Node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,10 @@
   "bugs": {
     "url": "https://github.com/dbotia/micalc/issues"
   },
-  "homepage": "https://github.com/dbotia/micalc#readme"
+  "homepage": "https://github.com/dbotia/micalc#readme",
+  "dependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.5",
+    "save-dev": "^2.0.0"
+  }
 }
