--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A basic Calculator in Node",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "cover": "istanbul cover ./node_modules/mocha/bin/_mocha"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,11 @@
   },
   "homepage": "https://github.com/dbotia/micalc#readme",
   "dependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^5.0.5",
     "save-dev": "^2.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "istanbul": "^1.1.0-alpha.1",
+    "mocha": "^4.1.0"
   }
 }
